# rexx

./: .gitignore  CMakeLists.txt  LICENSE  README.md
rexx/: CMakeLists.txt
rexx/include/rexx/: rexx.hpp
rexx/include/rexx/constexpr/: all_of.hpp  back.hpp  front.hpp
rexx/include/rexx/metafunctions/: all_of.hpp  any_of.hpp  append.hpp  back.hpp  concat.hpp  fill_n.hpp  front.hpp  none_of.hpp  prepend.hpp  remove.hpp  remove_if.h  remove_if.hpp  skip.hpp  take.hpp  transform.hpp  zip.hpp
rexx/include/rexx/traits/: is_tuple.hpp
rexx/include/rexx/utility/: compile_time_type_printer.hpp  null_type.hpp
tests/: CMakeLists.txt
tests/source/: all_of_tests.cpp  concat_tests.cpp  skip_tests.cpp  transform_tests.cpp
tests/source/constexpr/: back.cpp  front.cpp
tests/source/metafunctions/: any_of_tests.cpp  append_tests.cpp  back_tests.cpp  front_tests.cpp  prepend_tests.cpp  remove_if_tests.cpp  remove_tests.cpp
